resources/webidl2/test/invalid/baseline/nonnullableany.txt
Syntax error at line 2, since `interface NonNullable`:
  attribute any? foo;
                 ^ Type `any` cannot be made nullable
